# mock-oracles

./: .eslintcache  .eslintrc.js  .gitignore  Anchor.toml  Cargo.toml  README.md  package.json
.github/workflows/: ci.yml  release.yml
programs/mock-oracles/: Cargo.toml
programs/mock-oracles/src/: lib.rs
programs/write_account/: Cargo.toml
programs/write_account/src/: lib.rs
src/: index.ts
src/programs/: index.ts  mock-oracles.ts
tests/: mock-oracles.spec.ts  write_account.js  write_account.ts
