[package]
name = "write_account"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "write_account"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.19.0"
pyth-client = "0.2.2"
switchboard-program = "0.1.59"
quick-protobuf = "0.8.0"

